--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@babel/parser": "^7.28.4",
     "@tailwindcss/vite": "^4.1.13",
+    "monaco-editor": "^0.53.0",
+    "monaco-editor-vue3": "^1.0.4",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@babel/traverse": "^7.28.4",
     "@tsconfig/node22": "^22.0.2",
+    "@types/babel__traverse": "^7.28.0",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^14.6.0",
@@ -32,6 +37,7 @@
     "jiti": "^2.4.2",
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
+    "shiki": "^3.13.0",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.8.0",
     "vite": "^7.0.6",
